objects/LLC_BI__Requirement_Dependency__c.object
<CustomObject>
    <description>A Requirement Dependency defines an association in which one Requirement must be acted upon jointly with another Requirement.</description>
    <fields>
        <fullName>LLC_BI__Controlling_Requirement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This required field contains a reference to the Requirement which controls this dependency.</description>
        <inlineHelpText>This required field contains a reference to the Requirement which controls this dependency.</inlineHelpText>
        <label>Controlling Requirement</label>
        <referenceTo>LLC_BI__Requirement__c</referenceTo>
        <relationshipLabel>Dependent Requirements</relationshipLabel>
        <relationshipName>Dependent_Requirements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Dependency_Type__c</fullName>
        <description>This required field defines the behavior of the dependency between the associated Requirements.</description>
        <inlineHelpText>This required field defines the behavior of the dependency between the associated Requirements.</inlineHelpText>
        <label>Dependency Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finish to Start</fullName>
                    <default>true</default>
                    <label>Finish to Start</label>
                </value>
                <value>
                    <fullName>Start to Start</fullName>
                </value>
                <value>
                    <fullName>Finish to Finish</fullName>
                </value>
                <value>
                    <fullName>Start to Finish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Dependent_Requirement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This required field contains a reference to the Requirement which is controlled by this dependency.</description>
        <inlineHelpText>This required field contains a reference to the Requirement which is controlled by this dependency.</inlineHelpText>
        <label>Dependent Requirement</label>
        <referenceTo>LLC_BI__Requirement__c</referenceTo>
        <relationshipLabel>Controlling Requirements</relationshipLabel>
        <relationshipName>Controlling_Requirements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Template__c</fullName>
        <description>This optional field contains the developer name of the Requirement Dependency Template on which this Requirement Dependency is based.</description>
        <externalId>true</externalId>
        <inlineHelpText>This optional field contains the developer name of the Requirement Dependency Template on which this Requirement Dependency is based.</inlineHelpText>
        <label>Template</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Requirement Dependency</label>
    <nameField>
        <displayFormat>RD-{0000000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirement Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>